# pygeoinf

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  BASIS_HANDLING_DESIGN.md  BESSEL_SOBOLEV_PRIOR_UPDATE.md  BESSEL_SOBOLEV_SWEEP.md  BUGFIX_SUMMARY.md  CONTRIBUTING.md  CONVEX_ANALYSIS_EXTENSION.md  CONVEX_ANALYSIS_REVIEWER_GUIDE.md  DISCONTINUITY_API.md  EIGENVALUE_VERIFICATION.md  EuclideanExample.py  Example.py  FUNCTION_RESTRICTION.md  OPERATOR_RESTRICTION_UPDATE.md  README.md  REFACTORING_LOG.md  RELEASE_PROCESS.md  SENSITIVITY_KERNEL_IMPLEMENTATION_SUMMARY.md  SHTools.py  SOBOLEV_DISCONTINUITY_UPDATE.md  SOLA_DIRECT_SUM.md  VectorTest.py  benchmark_fast_transforms.py  debug_lebesgue.py  dependency_graph.py  dependency_tree.txt  example2.py  gradient_accuracy_test.py  hilbert.dot  out.txt  pd_test_results.txt  pli_multiple_bessel_sobolev_update.md  pyproject.toml  pytest_warnings.txt  quick_test.py  simple_gradient_test.py  test.py  (+9 more)
LinearInference/: Euclidean.py  Gaussian.py  Hilbert.py  Operator.py  Problem.py  Solver.py  Vector.py
agents/: Atlas.agent.md  Code-Review-subagent.agent.md  Explorer-subagent.agent.md  Oracle-subagent.agent.md  Prometheus.agent.md  Sisyphus-subagent.agent.md  Theory-Validator-subagent.agent.md
data/: gsn_stations.csv  usgs_event_cache.csv
docs/: radial_function_providers.md  requirements.txt  theory_map.md  theory_papers_index.md
examples/: derivative_free_test.py  direct_sum.py  ex1.py  ex2.py  example1.ipynb  example1.py  example2.py  example3.py  example4.py  example5.py  example6.py  example_sensitivity_kernels.py  hilbert_test.py  inference.ipynb  inference.py  inference.py.lprof  inversion.ipynb  linalg_profile_results.txt  linalg_profile_results_1.txt  linalg_profile_results_2.txt  point_evaluation_example.py  prior.ipynb  profile_output.txt  profile_results  random_matrix.py  refined.mesh  sample_measure.py  tensor_product.py  test.ipynb  test2.ipynb  test_separated_configs.py
linear_inference/: __init__.py  euclidean.py  euclidean_space.py  forward_problem.py  gaussian_measure.py  hilbert_space.py  hilbert_space_old.py  interfaces.py  linear_form.py  linear_operator.py  sobolev_S2.py  space.py  sphere.py  vector_space.py
linear_inference_old/: Bayesian.py  Gaussian.py  banach.py  hilbert.py  operator.py  vector.py
plans/: bundle-methods-optimizer-plan.md  coefficient-space-notation-and-metric-phase-1-complete.md  coefficient-space-notation-and-metric-plan.md  dual-master-fast-convex-optimisation-report.md  dual_master_implementation.md  dual_master_prometheus.md  example-3-notebook-cleanup-phase-1-complete.md  (+22 more)
(+1056 files in other folders)
