[tool.poetry]
name = "linear-inference"
version = "0.1.0"
description = "Package for solving linear inference problems posed on Hilbert spaces"
authors = ["David Al-Attar"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.0"
scipy = "^1.14.1"
pyshtools = "^4.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
