[tool.poetry]
name = "pygeoinf"
version = "0.1.4"
description = "A package for solving inference and inverse problems, with a focus on geophysical applications"
authors = ["David Al-Attar and Dan Heathcote"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9"
numpy = ">=1.26.0"
scipy = ">=1.0.0"
pyshtools = ">=4.0.0"
matplotlib = ">=3.0.0"
pytest = ">=8.0.0"
pyqt6 = ">=6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
