[tool.poetry]
name = "pygeoinf"
version = "1.7.5"
description = "A package for solving geophysical inference and inverse problems"
authors = ["David Al-Attar, Dan Heathcote, Adrian Mag"]
readme = "README.md"
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = ">=3.12"
numpy = ">=2.0.0"
scipy = ">=1.13.0"
matplotlib = ">=3.9.0"
pyqt6 = ">=6.11.0"
joblib = "^1.5.3"
threadpoolctl = "^3.6.0"
numba = "^0.65.0"
ipympl = "^0.10.0"

# Optional dependencies for 'sphere' extra
pyshtools = { version = ">=4.14.1", optional = true }
Cartopy = { version = "^0.25.0", optional = true }

[tool.poetry.extras]
sphere = ["pyshtools", "Cartopy"]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.2.1"
snakeviz = "^2.2.2"
jupyter = "^1.1.1"
furo = "^2025.7.19"
sphinx = "<8.2"
ruff = "^0.5.5"
pre-commit = "^4.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# --- Added Ruff Configuration ---
[tool.ruff]

[tool.ruff.lint.per-file-ignores]
# For any file in the "tests/" directory, ignore the lambda assignment warning (E731).
"tests/*" = ["E731", "E741"]

# For the sphere files, where 'l' is a common variable name for spherical
# harmonic degree, ignore the ambiguous variable name warning (E741).
"pygeoinf/symmetric_space/sphere.py" = ["E741"]
"pygeoinf/symmetric_space/sh_tools.py" = ["E741"]
"pygeoinf/symmetric_space/wigner.py" = ["E741"]
"pygeoinf/symmetric_space_new/sphere.py" = ["E741"]
"pygeoinf/symmetric_space_new/sh_tools.py" = ["E741"]
"pygeoinf/rough_work/*" = ["E741"]